Fixed issue:fonction virtuelle regle dans aventurier,a rectifier le deplacement dans l'aventurier, ce n'est pas une seule fonction mais plusieurs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,19 @@
 cmake_minimum_required(VERSION 3.26)
-project(App_Aventurier_jeu_develop)
+project(App_Aventurier_jeu)
 
 set(CMAKE_CXX_STANDARD 14)
 
-include_directories(.)
-
-add_executable(App_Aventurier_jeu_develop
-        affichages.cpp
-        affichages.h
-        armures.cpp
-        armures.h
-        attaques.cpp
-        attaques.h
-        aventuriers.cpp
-        aventuriers.h
-        epees.cpp
-        epees.h
-        equipements.cpp
-        equipements.h
-        monstres.cpp
-        monstres.h
-        personnages.cpp
-        personnages.h
-        terrain.cpp
-        terrain.h
+add_executable(App_Aventurier_jeu
+        elements.h
         elements.cpp
-        monstresvoyants.h
-        monstresaveugles.h)
+        doctest.h
+        maintest.cpp
+        personnages.h
+        personnages.cpp
+        aventuriers.h
+        aventuriers.cpp
+        testaventuriers.h
+        testaventuriers.cpp
+        monstres.h
+        monstres.cpp
+)
