gestion du terrain et implementation des classes en rapport avec le terrain salles,carte,position et de la classe afficheur pour effectuer le teste

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,8 @@ add_executable(App_Aventurier_jeu
         monstres.cpp
         equipements.cpp
         testarmures.cpp
+        terrain.cpp
+        affichages.h
+        card.cpp
+        salles.cpp
 )
